--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,27 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components {
+  .hoverAnimation {
+    transition: all 0.2s ease-out;
+    border-radius: 9999px;
+    cursor: pointer;
+    width: 52px;
+    height: 52px;
+  }
+  .hoverAnimation:hover {
+    background-color: #d9d9d9;
+    opacity: 0.1;
+  }
+  @media (min-width: 1280px) {
+    .hoverAnimation {
+      width: auto;
+      height: auto;
+      padding-top: 0.75rem;
+      padding-bottom: 0.75rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+  }
+}
