--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,24 +27,24 @@ body {
 
 @layer components {
   .hoverAnimation {
-    transition: all 0.2s ease-out;
-    border-radius: 9999px;
-    cursor: pointer;
-    width: 52px;
-    height: 52px;
+    @apply transition-all duration-200 ease-out rounded-full cursor-pointer w-13 h-13;
   }
+
   .hoverAnimation:hover {
-    background-color: #d9d9d9;
-    opacity: 0.1;
+    @apply bg-neutral-300 dark:bg-gray-700 opacity-10;
   }
+
   @media (min-width: 1280px) {
     .hoverAnimation {
-      width: auto;
-      height: auto;
-      padding-top: 0.75rem;
-      padding-bottom: 0.75rem;
-      padding-left: 1rem;
-      padding-right: 1rem;
+      @apply w-auto h-auto py-3 px-4;
     }
+  }
+
+  .icon {
+    @apply cursor-pointer w-9 h-9 flex items-center justify-center rounded-full transition-all duration-200 ease-out;
+  }
+
+  .icon:hover {
+    @apply bg-[#1d9bf0] opacity-10;
   }
 }
