--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,4 +47,7 @@ body {
   .icon:hover {
     @apply bg-[#1C7ED6] opacity-10;
   }
+  .tag {
+    @apply text-[#1d9bf0] font-normal hover:underline cursor-pointer;
+  }
 }
